@@ -25,7 +25,7 @@ func (c *SSLConfig) isEnabled() bool {
 }
 
 var defaultConfig = Config{
-	Host:            "localhost:8080",
+	Host:            "localhost:8200",
 	MaxUnzippedSize: 10 * 1024 * 1024, // 10mb
 	MaxHeaderBytes:  1048576,          // 1mb
 	ReadTimeout:     2 * time.Second,
