@@ -8,7 +8,7 @@ link:./spec/errors/payload.json[JSON Schema]
 
 ["source","sh",subs="attributes"]
 ------------------------------------------------------------
-$ curl http://localhost:8080/v1/errors --header "Content-Type:application/json" --data @docs/data/intake-api/generated/error/payload.json
+$ curl http://localhost:8200/v1/errors --header "Content-Type:application/json" --data @docs/data/intake-api/generated/error/payload.json
 ------------------------------------------------------------
 
 link:./data/intake-api/generated/error/payload.json[Example Payload]
