@@ -7,7 +7,7 @@ var apm = require('elastic-apm').start({
   // Use if APM Server requires a token
   secretToken: '',
 
-  // Set custom APM Server URL (default: http://localhost:8080)
+  // Set custom APM Server URL (default: http://localhost:8200)
   serverUrl: '',
 
   flushInterval: 1
